--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <link rel="icon" href="https://r2.jimi1126.cn/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JIMI1126</title>
+    <link
+      rel="preload"
+      as="style"
+      onload="this.rel='stylesheet'"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" />
     <script slot="https://polyfill.io/v3/polyfill.min.js"></script>
     <script>
       var _hmt = _hmt || [];
       (function () {
         var hm = document.createElement('script');
+        hm.defer = true;
         hm.src = 'https://hm.baidu.com/hm.js?421ef215a26c78a0c1e095887355162c';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(hm, s);
